# ai-skills-workshop

./: README.md
ai-resources/: README.md  claude-setup.md
docs/: developing-paperblast-skill.md  git-github-guide.md  paperblast-skill-design.md  project-guide.md  project-setup-log.md  public-skills-and-mcps.md  skill-authoring-guide.md  what-is-a-skill.md  what-is-an-mcp.md  workflow-guide.md
examples/mcps/01-hello-world-mcp/: README.md  pyproject.toml  server.py
examples/python-calling/: 01-basic-api-call.py  02-tool-use.py  03-cborg-api-call.py
examples/skills/01-hello-world/: README.md  SKILL.md
examples/skills/02-paperblast/: INSTALL.md  README.md  SKILL.md  TESTING.md  USAGE-EXAMPLES.md  pyproject.toml
examples/skills/02-paperblast/references/: setup.md
examples/skills/02-paperblast/scripts/: check_deps.py  models.py  paperblast_mcp.py  test_parser.py
setup/: .env.example  create-hackathon-project.sh  requirements.txt
templates/mcp-template/: pyproject.toml  server.py
templates/skill-template/: SKILL.md
