[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biology-tools-mcp"
version = "0.1.0"
description = "Minimal MCP server with biology tools for teaching"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]
